Updated to os-2.17 and java-21